5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1637_869.log
== TEST (2019-04-09 11:01:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = input("quanto a pessoa pagou: ")
if (var1 >= 200):
	vp = var1 - (0.05 * var1)
else: 
	vp = var1
print(round(var1, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (var1 >= 200):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:01:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = floatinput("quanto a pessoa pagou: ")
if (var1 >= 200):
	vp = var1 - (0.05 * var1)
else: 
	vp = var1
print(round(var1, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1 = floatinput()
NameError: name 'floatinput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:02:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = float(input("quanto a pessoa pagou: "))
if (var1 >= 200):
	vp = var1 - (0.05 * var1)
else: 
	vp = var1
print(round(var1, 2))
-- OUTPUT:
200.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:02:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = float(input("quanto a pessoa pagou: "))
if (var1 >= 200):
	vp = var1 - (0.05 * var1)
else: 
	vp = var1
print(round(vp, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:02:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = float(input("quanto a pessoa pagou: "))
if (var1 >= 200):
	vp = var1 - (0.05 * var1)
else: 
	vp = var1
print(round(vp, 2))
-- EXECUTION TIME:
0.177069
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
